tests/NormalTests/paczka1/small_fuzzy/98624043.err
Error in line 1: AAM S966 q0,5
Error in line 5: AAM S966 188,3
